--- a/WorkingasDesigned/app/src/main/res/layout/drawer_layout.xml
+++ b/WorkingasDesigned/app/src/main/res/layout/drawer_layout.xml
@@ -9,17 +9,16 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:map="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                tools:context="com.pch2017.bergebf.workingasdesigned.MapActivity" />
     </FrameLayout>
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.pch2017.bergebf.workingasdesigned.MapActivity" />
-
 
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
