--- a/WorkingasDesigned/app/src/main/res/layout/details_dialog.xml
+++ b/WorkingasDesigned/app/src/main/res/layout/details_dialog.xml
@@ -5,7 +5,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
         <TableRow
             android:layout_width="match_parent"
@@ -95,7 +96,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button4"
